design for post

--- a/src/assets/css/general.css
+++ b/src/assets/css/general.css
@@ -2,7 +2,7 @@
 
 :root
 {
-	--color-primary: rgb(255, 0, 0, 0.2);
+	--color-primary: rgba(255, 102, 0, 0.2);
 }
 
 *
@@ -19,6 +19,7 @@ html
 
 body
 {
+    background-color: rgba(255, 102, 0, 0.1);
 	font-family: "Roboto", sans-serif;
 	font-size: 16px;
 
@@ -36,4 +37,9 @@ a
 {
     color: #000000;
     text-decoration: none;
+}
+
+#content
+{
+    /* padding: 25px 40px; */
 }
