Home page + Post page + Start API

--- a/src/assets/css/general.css
+++ b/src/assets/css/general.css
@@ -35,6 +35,7 @@ h1, h2, h3, h4, h5, h6
 
 a
 {
+	display: inline-block;
     color: #000000;
     text-decoration: none;
 }
@@ -42,4 +43,9 @@ a
 #content
 {
     /* padding: 25px 40px; */
+}
+
+.post_pretext, .post_text
+{
+	white-space: pre-line
 }
