--- a/src/assets/css/general.css
+++ b/src/assets/css/general.css
@@ -2,7 +2,7 @@
 
 :root
 {
-	--color-primary: rgba(255, 102, 0, 0.2);
+	--color-primary: rgb(255, 208, 177);
 }
 
 *
@@ -19,13 +19,13 @@ html
 
 body
 {
-    background-color: rgba(255, 102, 0, 0.1);
 	font-family: "Roboto", sans-serif;
 	font-size: 16px;
 
 	min-height: 100%;
 
 	color: #000000;
+	background-color: rgba(255, 102, 0, 0.1);
 }
 
 h1, h2, h3, h4, h5, h6
@@ -36,16 +36,23 @@ h1, h2, h3, h4, h5, h6
 a
 {
 	display: inline-block;
-    color: #000000;
-    text-decoration: none;
+
+	text-decoration: none;
+
+	color: #000000;
 }
 
 #content
 {
-    /* padding: 25px 40px; */
+	/* padding: 25px 40px; */
 }
 
 .post_pretext, .post_text
 {
-	white-space: pre-line
+	white-space: pre-line;
+}
+
+.content-wrapper
+{
+	flex-grow: 1;
 }
