--- a/src/assets/css/general.css
+++ b/src/assets/css/general.css
@@ -3,6 +3,7 @@
 :root
 {
 	--color-primary: rgb(255, 208, 177);
+	--color-primary-hover: rgb(255, 181, 131);
 }
 
 *
@@ -28,7 +29,7 @@ body
 	background-color: rgba(255, 102, 0, 0.1);
 }
 
-h1, h2, h3, h4, h5, h6
+h1, h2, h3, h4, h5, h6, input, button
 {
 	font-family: "Open Sans", sans-serif;
 }
@@ -55,4 +56,61 @@ a
 .content-wrapper
 {
 	flex-grow: 1;
+}
+
+.auth
+{
+	display: flex;
+	flex-flow: column nowrap;
+
+	max-width: 700px;
+	margin: 0 auto;
+	margin-top: 25px;
+	padding: 25px;
+
+	border-radius: 15px;
+	background-color: #FFFFFF;
+}
+
+.auth input, .auth button
+{
+	font-size: 16px;
+
+	margin-top: 15px;
+	padding: 10px 20px;
+
+	text-align: left;
+
+	border-radius: 10px;
+	outline: 0;
+}
+
+.auth h1
+{
+	margin-bottom: 5px;
+}
+
+.auth input
+{
+	transition: 0.3s all;
+
+	border: 1px solid var(--color-primary);
+}
+
+.auth input:hover
+{
+	border: 1px solid var(--color-primary-hover);
+}
+
+.auth button
+{
+	transition: 0.3s all;
+
+	border: 0;
+	background: var(--color-primary);
+}
+
+.auth button:hover
+{
+	background: var(--color-primary-hover);
 }
