--- a/src/assets/css/general.css
+++ b/src/assets/css/general.css
@@ -104,6 +104,7 @@ a
 
 .auth button
 {
+	cursor: pointer;
 	transition: 0.3s all;
 
 	border: 0;
@@ -113,4 +114,19 @@ a
 .auth button:hover
 {
 	background: var(--color-primary-hover);
+}
+
+.error, .success
+{
+  padding: 15px 20px;
+  background-color: #ffcaca70;
+  border-radius: 10px;
+  align-self: baseline;
+  margin-top: 15px;
+  color: #808080;
+}
+
+.success
+{
+	background-color: #caffd570;
 }
